tests/NormalTests/paczka1/fuzzy1/53216469.err
Error in line 5: tLKwVqOeFR A186 95,2
Error in line 10: tLKwVqOeFR S940 92,8
Error in line 17: S940 A464 83,6
Error in line 15: 435yut S954 18,3
Error in line 22: 435yut A186 21,3
Error in line 27: S940 A464 43,6
Error in line 23: 435yut S940 14,8
